<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="example_largeText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation_menu_characters_title">Characters</string>
    <string name="bottom_navigation_menu_location_title">Location</string>
    <string name="bottom_navigation_menu_episodes_title">Episodes</string>
    <string name="character_name_title">Name:</string>
    <string name="character_species_title">Species:</string>
    <string name="character_status_title">Status:</string>
    <string name="character_gender_title">Gender:</string>
    <string name="character_example_value">Example</string>
    <string name="load_error_text">Load error</string>
    <string name="try_again">Try again</string>
    <string name="character_type_title">Type:</string>
    <string name="character_origin_title">Origin:</string>
    <string name="character_location_title">Location:</string>
    <string name="episodes_title">Episodes:</string>
    <string name="dimension_title">Dimension:</string>
    <string name="episode_number_title">Episode:</string>
    <string name="air_date_title">Air date:</string>
    <string name="status_all">All</string>
    <string name="status_alive">Alive</string>
    <string name="status_dead">Dead</string>
    <string name="status_unknown">Unknown</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_genderless">Genderless</string>
    <string name="gender_unknown">Unknown</string>
    <string name="save_button_title">Apply</string>
    <string name="search_count">Found %d elements</string>
    <string name="search_not_found">Not found</string>
    <string name="search_initial">Search mode</string>
    <string name="filter_initial">Filter mode</string>
    <string name="network_error">No internet connection. Saved data loaded</string>
    <string name="network_connected">Сonnection restored</string>
    <string name="error_connection">An error has occurred</string>
</resources>