<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/episodeConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/rounded_shape"
    android:padding="6dp">

    <TextView
        android:id="@+id/episodeNameTitle"
        style="@style/TitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/character_name_title"
        app:layout_constraintBottom_toTopOf="@id/episodeNameValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/episodeNameValue"
        style="@style/ValueLocation"
        android:layout_marginStart="6dp"
        android:text="@string/character_example_value"
        app:layout_constraintBottom_toTopOf="@id/episodeNumberTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episodeNameTitle" />

    <TextView
        android:id="@+id/episodeNumberTitle"
        style="@style/TitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/episode_number_title"
        app:layout_constraintBottom_toTopOf="@id/episodeNumberValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episodeNameValue"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/episodeNumberValue"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/character_example_value"
        app:layout_constraintBottom_toTopOf="@id/airDateTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episodeNumberTitle" />

    <TextView
        android:id="@+id/airDateTitle"
        style="@style/TitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/air_date_title"
        app:layout_constraintBottom_toTopOf="@id/airDateValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episodeNumberValue" />

    <TextView
        android:id="@+id/airDateValue"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/character_example_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/airDateTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>